Create Thumbnails for TeamPage

--- a/team.html
+++ b/team.html
@@ -1,259 +1,323 @@
 <h1 class="header center">Unser Team</h1>
 <div class="row">
-<p class="flow-text">Leitungsteam</p>
-<div class="card z-depth-3 col x16 s12 m6 l3">
+  <p class="flow-text">Leitungsteam</p>
+  <div class="card z-depth-3 col x16 s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Anton.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbAnton.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Anton</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Anton</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><b>Anton</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Anton</b><i class="material-icons right">close</i></span
+      >
       <p>Organisation</p>
       <p>Schauspieler</p>
       <p>Post-Production</p>
       <p>Leadman</p>
       <p>Requisitenbau</p>
     </div>
-</div>
+  </div>
   <div class="card z-depth-3 col x16 s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Logge.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbLogge.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Logge</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Logge</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Logge</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Logge</b><i class="material-icons right">close</i></span
+      >
       <p>Organisation</p>
       <p>Post-Production</p>
       <p>VFX</p>
       <p>Schauspieler</p>
       <p>Homepage</p>
     </div>
-  </div>          
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Julian.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbJulian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Julian</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Julian</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><b>Julian</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Julian</b><i class="material-icons right">close</i></span
+      >
       <p>Organisation</p>
       <p>Catering</p>
       <p>Ton</p>
       <p>Requisitenbau</p>
       <p>Homepage</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Sebastian.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbSebastian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Sebastian</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Sebastian</b><i class="material-icons right">close</i></span
+      >
       <p>Produzent</p>
       <p>Regie</p>
       <p>Post-Production</p>
       <p>Autor</p>
       <p>Organisation</p>
     </div>
-</div>
-   
-<p class="flow-text">Schauspieler</p>  
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+
+  <p class="flow-text">Schauspieler</p>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Carina.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbCarina.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Carina</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Carina</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Carina</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Carina</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
       <p>Maske</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Christian.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbChristian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Christian</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Christian</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Christian</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Christian</b><i class="material-icons right">close</i></span
+      >
       <p>Post-Production</p>
       <p>VFX</p>
       <p>Organisation</p>
       <p>Technik</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Frankie.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbFrankie.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Frankie</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Frankie</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
       <p>Organisation</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Leon.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbLeon.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Leon</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Leon</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Leon</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Leon</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Leonhard.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbLeonhard.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Leonhard</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Leonhard</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
       <p>Post-Production</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Manuela.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbManuela.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Manuela</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Manuela</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Marleen.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbMarleen.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Marleen</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Marleen</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Noah.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbNoah.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Noah</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Noah</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Noah</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Noah</b><i class="material-icons right">close</i></span
+      >
       <p>Technik</p>
       <p>Licht</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Pascal.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbPascal.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Pascal</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Pascal</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Patrick.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbPatrick.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Patrick</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Patrick</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
       <p>Organisation</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Paul.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbPaul.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Paul</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Paul</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Paul</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Paul</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Till.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbTill.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Till</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Till</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Till</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Till</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-<div class="card z-depth-3 col s12 m6 l3">
+  </div>
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/team/Toni.jpg">
+      <img class="activator" src="./Bilder/Team/ThumbToni.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"><b>Toni</b><i class="material-icons right">more_vert</i></span>
-      <!--<p><a href="#">Weitere Infos</a></p>-->
+      <span class="card-title activator grey-text text-darken-4"
+        ><b>Toni</b><i class="material-icons right">more_vert</i></span
+      >
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4"><b>Toni</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"
+        ><b>Toni</b><i class="material-icons right">close</i></span
+      >
       <p>Schauspieler</p>
     </div>
-</div>
-
-
-
-
+  </div>
 </div>
 <script>
-  var currPage = "team";
-  history.pushState(null, null, '?p=team');
+  var currPage = 'team'
+  history.pushState(null, null, '?p=team')
 </script>
