fix missing slash

--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
   <p class="flow-text">Leitungsteam</p>
   <div class="card z-depth-3 col x16 s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbAnton.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Anton.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -24,7 +24,7 @@
   </div>
   <div class="card z-depth-3 col x16 s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbLogge.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Logge.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -45,7 +45,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbJulian.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Julian.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -66,7 +66,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbSebastian.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Sebastian.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -89,7 +89,7 @@
   <p class="flow-text">Schauspieler</p>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbCarina.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Carina.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -107,7 +107,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbChristian.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Christian.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -127,7 +127,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbFrankie.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Frankie.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -145,7 +145,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbLeon.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Leon.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -162,7 +162,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbLeonhard.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Leonhard.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -180,7 +180,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbManuela.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Manuela.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -197,7 +197,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbMarleen.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Marleen.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -214,7 +214,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbNoah.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Noah.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -232,7 +232,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbPascal.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Pascal.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -249,7 +249,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbPatrick.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Patrick.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -267,7 +267,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbPaul.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Paul.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -284,7 +284,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbTill.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Till.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
@@ -301,7 +301,7 @@
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="./Bilder/Team/ThumbToni.jpg" />
+      <img class="activator" src="./Bilder/Team/Thumb/Toni.jpg" />
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"
