--- a/team.html
+++ b/team.html
@@ -1,46 +1,87 @@
 <h1 class="header center">Unser Team</h1>
+<div id="profil" class="modal team-modal">
+  <div class="modal-content">
+    <h4>Profil von Anton</h4>
+    <div class="row">
+      <div class="col s12">
+        <p>Organisation von Events, Requisitenbau, Schauspieler
+        </p>
+      </div>
+      <div class="col s12 m6 l4 xl5">
+        <img class="responsive-img" src="Bilder/Team/Full/Anton.jpg">
+      </div>
+      <div class="col s12 m6 l8 xl7">
+        <p class="flow-text">Sowohl für die Organisation unserer Veranstaltungen als auch für den Set- und
+          Requisitenbau ist unser Anton
+          zuständig. Wo er ist, ist gute Laune am Set nicht weit. Im ersten Film “Die Chroniken von Selantis- Dunkle
+          Bedrohung” übernahm er die Rolle des Bösewichtes Baris und verkörperte sie auch in den weiteren Teilen der
+          Reihe.
+        </p>
+      </div>
+      <div class="col s12 section">
+        <p>
+          Projekte:
+        </p>
+        <ul>
+          <li>
+            “Die Chroniken von Selantis- Dunkle Bedrohung” (2015)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung” (2017)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube” (ab 2019)
+        </ul>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen </a>
+  </div>
+</div>
 <div class="row">
   <p class="flow-text">Leitungsteam</p>
-  <div class="card z-depth-3 col x16 s12 m6 l3">
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Anton.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Anton</b><i class="material-icons right">more_vert</i></span
-      >
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
+      <span class="card-title activator grey-text text-darken-4"><b>Anton</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Anton</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Anton</b><i class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Schauspieler</p>
       <p>Post-Production</p>
       <p>Leadman</p>
       <p>Requisitenbau</p>
+      <p><a class="modal-trigger" href="#profil">Weitere Infos</a></p>
     </div>
   </div>
-  <div class="card z-depth-3 col x16 s12 m6 l3">
+  <div class="card z-depth-3 col s12 m6 l3">
     <div class="card-image waves-effect waves-block waves-light">
       <img class="activator" src="./Bilder/Team/Thumb/Logge.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Logge</b><i class="material-icons right">more_vert</i></span
-      >
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
+      <span class="card-title activator grey-text text-darken-4"><b>Logge</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Logge</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Logge</b><i class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Post-Production</p>
       <p>VFX</p>
       <p>Schauspieler</p>
       <p>Homepage</p>
+      <!--
+        <p><a class="modal-trigger" href="#profil">Weitere Infos</a></p>
+      -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -48,15 +89,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Julian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Julian</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Julian</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Julian</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Julian</b><i class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Catering</p>
       <p>Ton</p>
@@ -69,15 +106,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Sebastian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Sebastian</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Sebastian</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">close</i></span>
       <p>Produzent</p>
       <p>Regie</p>
       <p>Post-Production</p>
@@ -92,15 +125,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Carina.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Carina</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Carina</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Carina</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Carina</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Maske</p>
     </div>
@@ -110,17 +139,12 @@
       <img class="activator" src="./Bilder/Team/Thumb/Christian.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Christian</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Christian</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Christian</b><i class="material-icons right">close</i></span
-      >
-      <p>Post-Production</p>
-      <p>VFX</p>
+      <span class="card-title grey-text text-darken-4"><b>Christian</b><i class="material-icons right">close</i></span>
+      <p>Drohne</p>
       <p>Organisation</p>
       <p>Technik</p>
     </div>
@@ -130,15 +154,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Frankie.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Frankie</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Frankie</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Organisation</p>
     </div>
@@ -148,15 +168,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Leon.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Leon</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Leon</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Leon</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Leon</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -165,15 +181,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Leonhard.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Leonhard</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Leonhard</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Post-Production</p>
     </div>
@@ -183,15 +195,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Manuela.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Manuela</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Manuela</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -200,15 +208,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Marleen.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Marleen</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Marleen</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -217,15 +221,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Noah.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Noah</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Noah</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Noah</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Noah</b><i class="material-icons right">close</i></span>
       <p>Technik</p>
       <p>Licht</p>
     </div>
@@ -235,15 +235,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Pascal.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Pascal</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Pascal</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -252,15 +248,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Patrick.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Patrick</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Patrick</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Organisation</p>
     </div>
@@ -270,15 +262,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Paul.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Paul</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Paul</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Paul</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Paul</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -287,15 +275,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Till.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Till</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Till</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Till</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Till</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -304,15 +288,11 @@
       <img class="activator" src="./Bilder/Team/Thumb/Toni.jpg" />
     </div>
     <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4"
-        ><b>Toni</b><i class="material-icons right">more_vert</i></span
-      >
+      <span class="card-title activator grey-text text-darken-4"><b>Toni</b><i class="material-icons right">more_vert</i></span>
       <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"
-        ><b>Toni</b><i class="material-icons right">close</i></span
-      >
+      <span class="card-title grey-text text-darken-4"><b>Toni</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
     </div>
   </div>
@@ -320,4 +300,5 @@
 <script>
   var currPage = 'team'
   history.pushState(null, null, '?p=team')
+  $('.team-modal').modal({ startingTop: '1%', endingTop: '5%' });
 </script>
