--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <h1 class="header center">Unser Team</h1>
-<div id="profil" class="modal team-modal">
+<div id="profil_anton" class="modal team-modal">
   <div class="modal-content">
-    <h4>Profil von Anton</h4>
+    <h4>Anton</h4>
     <div class="row">
       <div class="col s12">
         <p>Organisation von Events, Requisitenbau, Schauspieler
@@ -38,7 +38,6 @@
           <li>
             “Die Chroniken von Selantis- Falscher Glaube” (ab 2019)
         </ul>
-        </p>
       </div>
     </div>
   </div>
@@ -46,6 +45,137 @@
     <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen </a>
   </div>
 </div>
+<div id="profil_logge" class="modal team-modal">
+  <div class="modal-content">
+    <h4>Logge</h4>
+    <div class="row">
+      <div class="col s12">
+        <p>VFX, Homepage, Schauspieler
+        </p>
+      </div>
+      <div class="col s12 m6 l4 xl5">
+        <img class="responsive-img" src="Bilder/Team/Full/Logge.jpg">
+      </div>
+      <div class="col s12 m6 l8 xl7">
+        <p class="flow-text">Schon seit der Gründung ist Logge für alles zuständig, was in den Bereich IT und VFX fällt. 
+            Schon immer als Statist bei den Drehs am Start, durfte er im dritten Teil der Selantis Trilogie das erste Mal eine Hauptrolle verkörpern. 
+            So hauchte er dem Charakter des Harras Leben ein.
+        </p>
+      </div>
+      <div class="col s12 section">
+        <p>
+          Projekte:
+        </p>
+        <ul>
+          <li>
+            “Die Chroniken von Selantis- Dunkle Bedrohung” (2015)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung” (2017)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube” (ab 2019)
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen </a>
+  </div>
+</div>
+<div id="profil_julian" class="modal team-modal">
+  <div class="modal-content">
+    <h4>Julian</h4>
+    <div class="row">
+      <div class="col s12">
+        <p>Requisitenbau, Catering, Homepage
+        </p>
+      </div>
+      <div class="col s12 m6 l4 xl5">
+        <img class="responsive-img" src="Bilder/Team/Full/Julian.jpg">
+      </div>
+      <div class="col s12 m6 l8 xl7">
+        <p class="flow-text">Unser Mann für alles. Egal was gebraucht wird, Julian hat immer Ideen und Einfälle auch die verrücktesten Ideen der Kreativabteilung in die Tat 
+            umzusetzen und lässt sich dabei nur schwer aus der Ruhe bringen. Durch seine Zuständigkeit für das Catering hält er die Moral am Set immer aufrecht.
+        </p>
+      </div>
+      <div class="col s12 section">
+        <p>
+          Projekte:
+        </p>
+        <ul>
+          <li>
+            “Die Chroniken von Selantis- Dunkle Bedrohung” (2015)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung” (2017)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube” (ab 2019)
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen </a>
+  </div>
+</div>
+<div id="profil_sebastian" class="modal team-modal">
+  <div class="modal-content">
+    <h4>Sebastian</h4>
+    <div class="row">
+      <div class="col s12">
+        <p>Produktion, Regie, Autor
+        </p>
+      </div>
+      <div class="col s12 m6 l4 xl5">
+        <img class="responsive-img" src="Bilder/Team/Full/Sebastian.jpg">
+      </div>
+      <div class="col s12 m6 l8 xl7">
+        <p class="flow-text">
+        </p>
+      </div>
+      <div class="col s12 section">
+        <p>
+          Projekte:
+        </p>
+        <ul>
+          <li>
+            “Die Chroniken von Selantis- Dunkle Bedrohung” (2015)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Letzte Hoffnung” (2017)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)
+          </li>
+          <li>
+            “Die Chroniken von Selantis- Falscher Glaube” (ab 2019)
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Schließen </a>
+  </div>
+</div>
+
+
 <div class="row">
   <p class="flow-text">Leitungsteam</p>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -56,13 +186,13 @@
       <span class="card-title activator grey-text text-darken-4"><b>Anton</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><b>Anton</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_anton">Anton</a></b><i class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Schauspieler</p>
       <p>Post-Production</p>
       <p>Leadman</p>
       <p>Requisitenbau</p>
-      <p><a class="modal-trigger" href="#profil">Weitere Infos</a></p>
+      <p><a class="modal-trigger" href="#profil_anton">Weitere Infos</a></p>
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -73,15 +203,13 @@
       <span class="card-title activator grey-text text-darken-4"><b>Logge</b><i class="material-icons right">more_vert</i></span>
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><b>Logge</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_logge">Logge</a></b><i class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Post-Production</p>
       <p>VFX</p>
       <p>Schauspieler</p>
       <p>Homepage</p>
-      <!--
-        <p><a class="modal-trigger" href="#profil">Weitere Infos</a></p>
-      -->
+      <p><a class="modal-trigger" href="#profil_logge">Weitere Infos</a></p>
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -90,15 +218,15 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Julian</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><b>Julian</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_julian">Julian</a></b><i class="material-icons right">close</i></span>
       <p>Organisation</p>
       <p>Catering</p>
       <p>Ton</p>
       <p>Requisitenbau</p>
       <p>Homepage</p>
+      <p><a class="modal-trigger" href="#profil_julian">Weitere Infos</a></p>
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -107,15 +235,15 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">close</i></span>
+      <span class="card-title grey-text text-darken-4"><b><a class="modal-trigger" href="#profil_sebastian">Sebastian</a></b><i class="material-icons right">close</i></span>
       <p>Produzent</p>
       <p>Regie</p>
       <p>Post-Production</p>
       <p>Autor</p>
       <p>Organisation</p>
+      <p><a class="modal-trigger" href="#profil_sebastian">Weitere Infos</a></p>
     </div>
   </div>
 
@@ -126,12 +254,12 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Carina</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Carina</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Maske</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -140,13 +268,13 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Christian</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Christian</b><i class="material-icons right">close</i></span>
       <p>Drohne</p>
       <p>Organisation</p>
       <p>Technik</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -155,12 +283,12 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Organisation</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -169,11 +297,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Leon</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Leon</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -182,12 +310,12 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Post-Production</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -196,11 +324,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -209,11 +337,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -222,12 +350,12 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Noah</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Noah</b><i class="material-icons right">close</i></span>
       <p>Technik</p>
       <p>Licht</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -236,11 +364,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -249,12 +377,12 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
       <p>Organisation</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -263,11 +391,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Paul</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Paul</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -276,11 +404,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Till</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Till</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
@@ -289,11 +417,11 @@
     </div>
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4"><b>Toni</b><i class="material-icons right">more_vert</i></span>
-      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4"><b>Toni</b><i class="material-icons right">close</i></span>
       <p>Schauspieler</p>
+      <!-- <p><a href="#">Weitere Infos</a></p> -->
     </div>
   </div>
 </div>
