Removed Crew Link Added Text for Sebastian

--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
         <p class="flow-text">
           Sowohl für die Organisation unserer Veranstaltungen als auch für den
           Set- und Requisitenbau ist unser Anton zuständig. Wo er ist, ist gute
-          Laune am Set nicht weit. Im ersten Film “Die Chroniken von Selantis-
+          Laune am Set nicht weit. Im ersten Film “Die Chroniken von Selantis -
           Dunkle Bedrohung” übernahm er die Rolle des Bösewichtes Baris und
           verkörperte sie auch in den weiteren Teilen der Reihe.
         </p>
@@ -21,17 +21,21 @@
       <div class="col s12 m12 l8 xl7">
         <p>Projekte:</p>
         <ul>
-          <li>“Die Chroniken von Selantis- Dunkle Bedrohung” (2015)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung” (2017)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube” (ab 2019)</li>
+          <li>“Die Chroniken von Selantis - Dunkle Bedrohung” (2015)</li>
+          <li>
+            “Die Chroniken von Selantis - Letzte Hoffnung” - Teaser (2016)
+          </li>
+          <li>“Die Chroniken von Selantis - Letzte Hoffnung” (2017)</li>
+          <li>
+            “Die Chroniken von Selantis - Falscher Glaube” - Teaser (2018)
+          </li>
+          <li>“Die Chroniken von Selantis - Falscher Glaube” (ab 2019)</li>
         </ul>
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -56,17 +60,21 @@
       <div class="col s12 m12 l8 xl7">
         <p>Projekte:</p>
         <ul>
-          <li>“Die Chroniken von Selantis- Dunkle Bedrohung” (2015)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung” (2017)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube” (ab 2019)</li>
+          <li>“Die Chroniken von Selantis - Dunkle Bedrohung” (2015)</li>
+          <li>
+            “Die Chroniken von Selantis - Letzte Hoffnung” - Teaser (2016)
+          </li>
+          <li>“Die Chroniken von Selantis - Letzte Hoffnung” (2017)</li>
+          <li>
+            “Die Chroniken von Selantis - Falscher Glaube” - Teaser (2018)
+          </li>
+          <li>“Die Chroniken von Selantis - Falscher Glaube” (ab 2019)</li>
         </ul>
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -91,17 +99,21 @@
       <div class="col s12 m12 l8 xl7">
         <p>Projekte:</p>
         <ul>
-          <li>“Die Chroniken von Selantis- Dunkle Bedrohung” (2015)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung” (2017)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube” (ab 2019)</li>
+          <li>“Die Chroniken von Selantis - Dunkle Bedrohung” (2015)</li>
+          <li>
+            “Die Chroniken von Selantis - Letzte Hoffnung” - Teaser (2016)
+          </li>
+          <li>“Die Chroniken von Selantis - Letzte Hoffnung” (2017)</li>
+          <li>
+            “Die Chroniken von Selantis - Falscher Glaube” - Teaser (2018)
+          </li>
+          <li>“Die Chroniken von Selantis - Falscher Glaube” (ab 2019)</li>
         </ul>
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -114,21 +126,33 @@
       <div class="col s12 m6 l4 xl5">
         <img class="responsive-img" src="Bilder/Team/Full/Sebastian.jpg" />
       </div>
-      <div class="col s12 m6 l8 xl7"><p class="flow-text"></p></div>
+      <div class="col s12 m6 l8 xl7">
+        <p class="flow-text">
+          Der Gründer und Regisseur von Palatina Films. Sebastian sorgt immer
+          dafür, dass die Dreharbeiten strukturiert und zeitig ablaufen. Bei der
+          Produktion gibt er vom Schreiben des Drehbuchs bis zum Schnitt der
+          Endfassung immer 100 %. Als Schöpfer der Selantis Reihe haucht er den
+          Charakteren Leben ein und bringt dies auch erfolgreich vor die Kamera.
+        </p>
+      </div>
       <div class="col s12 m12 l8 xl7">
         <p>Projekte:</p>
         <ul>
-          <li>“Die Chroniken von Selantis- Dunkle Bedrohung” (2015)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung”- Teaser (2016)</li>
-          <li>“Die Chroniken von Selantis- Letzte Hoffnung” (2017)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube”- Teaser (2018)</li>
-          <li>“Die Chroniken von Selantis- Falscher Glaube” (ab 2019)</li>
+          <li>“Die Chroniken von Selantis - Dunkle Bedrohung” (2015)</li>
+          <li>
+            “Die Chroniken von Selantis - Letzte Hoffnung” - Teaser (2016)
+          </li>
+          <li>“Die Chroniken von Selantis - Letzte Hoffnung” (2017)</li>
+          <li>
+            “Die Chroniken von Selantis - Falscher Glaube” - Teaser (2018)
+          </li>
+          <li>“Die Chroniken von Selantis - Falscher Glaube” (ab 2019)</li>
         </ul>
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+    <a href="#!" class="modal-close waves -effect waves -green btn-flat"
       >Schließen
     </a>
   </div>
@@ -137,7 +161,7 @@
 <div class="row">
   <p class="flow-text">Leitungsteam</p>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Anton.jpg" />
     </div>
     <div class="card-content">
@@ -153,13 +177,12 @@
       <p>Organisation</p>
       <p>Schauspieler</p>
       <p>Post-Production</p>
-      <p>Leadman</p>
       <p>Requisitenbau</p>
       <p><a class="modal-trigger" href="#profil_anton">Weitere Infos</a></p>
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Logge.jpg" />
     </div>
     <div class="card-content">
@@ -181,7 +204,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Julian.jpg" />
     </div>
     <div class="card-content">
@@ -203,7 +226,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Sebastian.jpg" />
     </div>
     <div class="card-content">
@@ -227,7 +250,7 @@
 
   <p class="flow-text">Schauspieler</p>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Carina.jpg" />
     </div>
     <div class="card-content">
@@ -245,7 +268,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Christian.jpg" />
     </div>
     <div class="card-content">
@@ -264,7 +287,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Frankie.jpg" />
     </div>
     <div class="card-content">
@@ -282,7 +305,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Leon.jpg" />
     </div>
     <div class="card-content">
@@ -299,7 +322,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Leonhard.jpg" />
     </div>
     <div class="card-content">
@@ -317,7 +340,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Manuela.jpg" />
     </div>
     <div class="card-content">
@@ -334,7 +357,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Marleen.jpg" />
     </div>
     <div class="card-content">
@@ -351,7 +374,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Noah.jpg" />
     </div>
     <div class="card-content">
@@ -369,7 +392,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Pascal.jpg" />
     </div>
     <div class="card-content">
@@ -386,7 +409,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Patrick.jpg" />
     </div>
     <div class="card-content">
@@ -404,7 +427,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Paul.jpg" />
     </div>
     <div class="card-content">
@@ -421,7 +444,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Till.jpg" />
     </div>
     <div class="card-content">
@@ -438,7 +461,7 @@
     </div>
   </div>
   <div class="card z-depth-3 col s12 m6 l3">
-    <div class="card-image waves-effect waves-block waves-light">
+    <div class="card-image waves -effect waves -block waves -light">
       <img class="activator" src="./Bilder/Team/Thumb/Toni.jpg" />
     </div>
     <div class="card-content">
