--- a/index.html
+++ b/index.html
@@ -64,22 +64,7 @@
       <!-- Side Nav -->
       <ul class="side-nav side-menu" id="mobile-nav">
         <li class="" style="text-align:center;height:100px;">
-          <a
-            href="/#"
-            target="_blank"
-            style="background-color:transparent !important;"
-          >
-            <img
-              onmouseover="this.src='./Bilder/locked.png';"
-              onmouseout="this.src='./Bilder/logo.png';"
-              src="./Bilder/logo.png"
-              alt="Logo"
-              class="circle logo tooltipped"
-              data-position="bottom"
-              data-delay="50"
-              data-tooltip="Für Login klicken"
-            />
-          </a>
+          <img src="./Bilder/logo.png" alt="Logo" class="circle logo" />
         </li>
         <li><div class="divider black"></div></li>
         <li>
@@ -206,18 +191,7 @@
         >
           <ul id="main-nav" class="" style="width:100%;">
             <li class="" style="margin-bottom:10px;">
-              <a href="http://crew.palatina-films.tk/#Login" target="_blank">
-                <img
-                  onmouseover="this.src='/Bilder/locked.png';"
-                  onmouseout="this.src='/Bilder/logo.png';"
-                  src="./Bilder/logo.png"
-                  alt="Logo"
-                  class="circle logo tooltipped"
-                  data-position="bottom"
-                  data-delay="50"
-                  data-tooltip="Für Login klicken"
-                />
-              </a>
+              <img src="./Bilder/logo.png" alt="Logo" class="circle logo" />
             </li>
             <li><div class="divider black"></div></li>
             <li>
